# CARLsim6

./: CMakeLists.txt
carlsim/kernel/src/gpu_module/: snn_gpu_module.cu
projects/: CMakeLists.txt  README.md
projects/asynchronous/ca3_snn_GPU_02_26_23_async_archetype/: CMakeLists.txt
projects/asynchronous/ca3_snn_GPU_02_26_23_async_baseline/: CMakeLists.txt  ca3net_02_26_23_baseline.xlsm  generateCONFIGStateSTP.h
projects/asynchronous/ca3_snn_GPU_02_26_23_async_class/: CMakeLists.txt  ca3net_02_26_23_class.xlsm
projects/ca3_example_net_02_26_23/: CMakeLists.txt  generateCONFIGStateSTP.h
projects/ca3_snn_GPU_02_26_23_pattern_completion/: CMakeLists.txt  ca3net_02_26_23_archetype.xlsm  generateCONFIGStateSTP.h
projects/ca3_snn_GPU_02_26_23_pattern_completion/src/: main_ca3_snn_GPU_02_26_23_pattern_completion.cpp
projects/full_scale_CA1_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_CA1_snn/src/: main_full_scale_CA1_snn.cpp
projects/full_scale_CA2_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_CA2_snn/src/: main_full_scale_CA2_snn.cpp
projects/full_scale_CA3_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_CA3_snn/src/: main_full_scale_CA3_snn.cpp
projects/full_scale_DG_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_DG_snn/src/: main_full_scale_DG_snn.cpp
projects/full_scale_EC_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_EC_snn/src/: main_full_scale_EC_snn.cpp
projects/full_scale_HPF_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_HPF_snn/src/: main_full_scale_HPF_snn.cpp
projects/full_scale_SUB_snn/: CMakeLists.txt  generateCONFIGStateSTP.h  generateSETUPStateSTP.h
projects/full_scale_SUB_snn/src/: main_full_scale_SUB_snn.cpp
projects/synchronous/ca3_snn_GPU_02_26_23_afferent/: CMakeLists.txt
projects/synchronous/ca3_snn_GPU_02_26_23_afferent/src/: main_ca3_snn_GPU_02_26_23_afferent.cpp
projects/synchronous/ca3_snn_GPU_02_26_23_archetype/: CMakeLists.txt  generateCONFIGStateSTP.h
projects/synchronous/ca3_snn_GPU_02_26_23_baseline/: CMakeLists.txt  ca3_snn_02_26_23_sync_baseline.txt  generateCONFIGStateSTP.h
projects/synchronous/ca3_snn_GPU_02_26_23_class/: CMakeLists.txt  generateCONFIGStateSTP.h
projects/updated_figures_tables/: 03_07_23_updated_figures.docx  03_07_23_updated_tables.docx  README.md
projects/updated_tables/: README.md
